Enable compact object headers on jdk 25+